Fix home spacing

--- a/_sass/stylesheet.scss
+++ b/_sass/stylesheet.scss
@@ -25,8 +25,8 @@ img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
-  gap: 30px 30px;
-  padding:30px;
+  gap: 20px 20px;
+  padding:20px;
 }
 
 .tile {
@@ -40,7 +40,6 @@ img {
   background-position: center;
   box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
-
 
 .tile-image{
   flex-grow: 1;
